# ruby-bindgen

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  Gemfile  LICENSE  README.md  Rakefile  c_bindings.md  code_review_round4.md  cpp_bindings.md  mkdocs.yml  ruby-bindgen.gemspec  zensical.toml
.agent/skills/bug-fix-workflow/: SKILL.md
.agent/skills/running-tests/: SKILL.md
.agent/skills/update-expected-output/: SKILL.md
.beads/: issues.jsonl
.github/workflows/: coverage.yml  docs.yml  test.yml
docs/: architecture.md  c_bindings.md  cmake_bindings.md  configuration.md  contributing.md  cpp_bindings.md  design-merge-workflow.md  examples.md  features.md  index.md  iterators.md  limitations.md  operators.md  prior_art.md  troubleshooting.md  type_spelling.md  updating_bindings.md  version_guards.md
docs/c/: c_bindings.md  constants.md  customizing.md  filtering.md  getting_started.md  library_loading.md  output.md  types.md  version_guards.md
docs/cmake/: cmake_bindings.md  filtering.md  getting_started.md  output.md
docs/cpp/: buffers.md  classes.md  cpp_bindings.md  customizing.md  enums.md  filtering.md  getting_started.md  iterators.md  operators.md  output.md  templates.md
lib/: ruby-bindgen.rb
lib/ruby-bindgen/: config.rb  inputter.rb  name_mapper.rb  namer.rb  outputter.rb  parser.rb  symbol_candidates.rb  symbol_entry.rb  symbols.rb  type_pointer_formatter.rb  version.rb
lib/ruby-bindgen/generators/: generator.rb
lib/ruby-bindgen/generators/cmake/: cmake.rb  directory.erb  guard.rb  presets.erb  project.erb
lib/ruby-bindgen/generators/ffi/: constant.erb  enum_constant_decl.erb  enum_decl.erb  enum_decl_anonymous.erb  ffi.rb  function.erb  library.erb  project.erb  translation_unit.erb  typedef_decl.erb  union.erb  variable.erb  version.erb  version_method.erb
lib/ruby-bindgen/generators/rice/: auto_generated_base_class.erb  class.erb  class_template.erb  class_template_specialization.erb  conversion_function.erb  cxx_iterator_method.erb  cxx_method.erb  enum_constant_decl.erb  enum_decl.erb  field_decl.erb  function.erb  function_pointer.rb  incomplete_class.erb  iterator_collector.rb  iterator_traits.rb  namespace.erb  non_member_operator_inspect.erb  operator[].erb  project.cpp.erb  project.hpp.erb  reference_qualifier.rb  rice.rb  rice_include.hpp.erb  signature_builder.rb  template_resolver.rb  translation_unit.cpp.erb  translation_unit.hpp.erb  translation_unit.ipp.erb  type_index.rb  (+3 more)
lib/ruby-bindgen/refinements/: cursor.rb  mswin_args.rb  source_range.rb  string.rb  translation_unit.rb  type.rb
plans/: parallelization_prerequisites.md
test/: abstract_test.rb  cmake_guard_test.rb  cmake_test.rb  compile_rice_test.rb  ffi_test.rb  namer_test.rb  operators.rb  outputter_test.rb  reference_qualifier_test.rb  rice_abstract_test.rb  rice_components_test.rb  rice_generator_test.rb  rice_test.rb  rice_test_base.rb  signature_builder_test.rb  simplecov_setup.rb  symbol_candidates_test.rb  symbols_test.rb  template_resolver_test.rb  test_outputter.rb  type_index_test.rb  type_speller_test.rb
test/bindings/c/: clang_ffi.rb  constants.rb  constants_ffi.rb  filtering.rb  filtering_ffi.rb  forward.rb  forward_ffi.rb  functions.rb  functions_ffi.rb  linkage_spec.rb  linkage_spec_ffi.rb  proj.rb  proj_experimental.rb  proj_ffi.rb  proj_version.rb  rename.rb  rename_ffi.rb  sqlite3.rb  sqlite3_ffi.rb  structs.rb  structs_ffi.rb  unions.rb  unions_ffi.rb  version_guards.rb  version_guards_ffi.rb  version_guards_version.rb
test/bindings/cpp/: CMakeLists.txt  CMakePresets.json  buffers-rb.cpp  buffers-rb.hpp  class-rb.cpp  class-rb.hpp  class_template_typedef_qualification-rb.cpp  class_template_typedef_qualification-rb.hpp  class_template_typedef_qualification-rb.ipp  classes-rb.cpp  classes-rb.hpp  classes-rb.ipp  constructors-rb.cpp  constructors-rb.hpp  constructors-rb.ipp  cross_file_base-rb.cpp  cross_file_base-rb.hpp  cross_file_base-rb.ipp  cross_file_derived-rb.cpp  cross_file_derived-rb.hpp  cross_file_derived-rb.ipp  default_values-rb.cpp  default_values-rb.hpp  default_values-rb.ipp  dependent_nested_types-rb.cpp  dependent_nested_types-rb.hpp  dependent_nested_types-rb.ipp  dependent_template_parameter_fidelity-rb.cpp  dependent_template_parameter_fidelity-rb.hpp  dependent_template_parameter_fidelity-rb.ipp  deprecated-rb.cpp  deprecated-rb.hpp  enum-rb.cpp  enum-rb.hpp  enums-rb.cpp  enums-rb.hpp  filtering-rb.cpp  filtering-rb.hpp  filtering-rb.ipp  function-rb.cpp  (+97 more)
test/bindings/cpp/guards/: CMakeLists.txt  base-rb.cpp  base-rb.hpp  cudaarithm-rb.cpp  cudaarithm-rb.hpp  cudaimgproc-rb.cpp  cudaimgproc-rb.hpp
test/bindings/cpp/guards/dnn/: CMakeLists.txt  layer-rb.cpp  layer-rb.hpp
test/bindings/cpp_project/: myproject-rb.cpp  myproject-rb.hpp  myproject_include.hpp  unions-rb.cpp  unions-rb.hpp
test/headers/: bindings-linux.yaml  bindings-windows.yaml  bindings.yaml
test/headers/c/: bindings.yaml  constants.h  filtering.h  forward.c  forward.h  functions.h  linkage_spec.h  proj_experimental.h  rename.h  structs.h  unions.h  version_guards.h
test/headers/cpp/: bindings.yaml  buffers.hpp  class.hpp  class_template_typedef_qualification.hpp  classes.hpp  cmake.yaml  cmake_bindings.yaml  constructors.hpp  cross_file_base.hpp  cross_file_derived.hpp  cross_file_forward_decl.hpp  default_values.hpp  dependent_nested_types.hpp  dependent_template_parameter_fidelity.hpp  deprecated.hpp  enum.hpp  enums.hpp  filtering.hpp  forward_declared_all_layers.hpp  forward_declared_classes.hpp  function.hpp  functions.hpp  implicit_default_constructor.hpp  incomplete_types.hpp  inheritance.hpp  inline_namespaces.hpp  iterators.hpp  iterators_stl.hpp  macro_template_parameters.hpp  mappings.hpp  nested_class_templates.hpp  non_system_external_opaque.hpp  non_system_incomplete_refs.hpp  opaque_namespace_api.hpp  opaque_namespace_full.hpp  opaque_namespace_handle.hpp  operators.hpp  overloads.hpp  parse_error_continue_broken.hpp  partial_namespace_template_args.hpp  (+14 more)
test/rice/: class.hpp  enum.hpp  function.hpp  inheritance.hpp
(+53 files in other folders)
